[package]
name = "rd8200_ppp_decoder"
authors = ["Ant Skelton <ant@ant.org>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
colored = "2.0.4"
crc = "3.0.1"
deku = "0.16.0"
hex = "0.4.3"
hifitime = "3.8.4"
nom = "7.1.3"
thiserror = "1.0.50"
